// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoneFound /> renders an info Icon component 1`] = `
<Box>
  <NoneFound__StyledItem>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="info-circle"
      pullRight={false}
    />
     No 
    test
     found
  </NoneFound__StyledItem>
</Box>
`;

exports[`<NoneFound /> when supplied [noListGroup=false] prop renders correctly 1`] = `
<Box>
  <NoneFound__StyledItem>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="info-circle"
      pullRight={false}
    />
     No 
    test
     found
  </NoneFound__StyledItem>
</Box>
`;

exports[`<NoneFound /> when supplied [noListGroup=true] prop renders correctly 1`] = `
<NoneFound__StyledItem>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
    pullRight={false}
  />
   No 
  test
   found
</NoneFound__StyledItem>
`;
